# omni-asset-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  DEPLOYMENT.md  README.md  omni_asset_cli.py  pyproject.toml  setup.py
deploy/: omni-asset-service.env.example  omni-asset-service.service
examples/: mini_test.usda
examples/boat_test/: boat.json  boat.usd  boat_base.usd  boat_inst.usd  boat_inst_base.usd  boat_no_tagging.usda
notes/: README.md  discussion_summary_2026-04-23_runtime_testing.md
omni-asset-cli-agent/: SKILL.md
omni-asset-cli-agent/agents/: openai.yaml
omni_asset_service/: __init__.py  __main__.py  app.py  config.py  db.py  schemas.py  storage.py  worker.py
omniverse-usd-asset-validator/: SKILL.md
omniverse-usd-asset-validator/agents/: openai.yaml
omniverse-usd-asset-validator/references/: agent-bootstrap-deployment.md  cli-mapping.md  cli-timeout-issue-zh.md  cli-timeout-issue.md  customer-setup-guide-zh.md  customer-setup-guide.md  environment-and-setup.md  human-operator-guide-zh.md  human-operator-guide.md  kind-checker-explained-zh.md  kind-checker-explained.md  natural-language-examples-zh.md  natural-language-examples.md  natural-language-to-args-zh.md  natural-language-to-args.md  project-documentation-zh.md  project-documentation.md  test-environment-deployment.md  test-result-boat.md
omniverse-usd-asset-validator/scripts/: check_omniverse_asset_validator_env.py  check_physics_runtime_env.py  map_prompt_to_validation.py  render_mesh_topology_issues.py  run_async_validation.py  run_physics_hit_test.py  run_simready_flywheel.py  run_sync_validation.py  runtime_physics_harness.py
physxdemos/: __init__.py
physxdemos/scenes/: AnalogDigitalClockDemo.py  AnalyticConeDemo.py  AnalyticCylinderDemo.py  ArticulationDemo.py  BoxOnPlaneDemo.py  BoxOnPlaneInstancedDemo.py  CenterOfMassDemo.py  ChairStackingDemo.py  ClothDeckChairDemo.py  CollisionGroupsDemo.py  CompliantContactsDemo.py  ContactReportDemo.py  ContactReportImmediateAPIDemo.py  ContactSlopCoefficientDemo.py  ConvexMeshDataDemo.py  ConveyorBeltDemo.py  D6JointDemo.py  DebugDrawHelpers.py  DistanceJointDemo.py  (+58 more)
scripts/: build_out_gallery.py  deploy_api_service.sh  deploy_isaacsim_docker.sh
tests/: test_service_storage_worker.py
(+6 files in other folders)
