[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-asset-cli"
version = "0.1.0"
description = "Unified CLI for Stage 1 furniture and prop OpenUSD validation with NVIDIA Omniverse Asset Validator"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI Codex" }
]
license = { text = "Proprietary" }
keywords = ["usd", "openusd", "omniverse", "asset-validator", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
validator = [
  "omniverse-asset-validator[usd,numpy]",
]
api = [
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.27,<1",
  "python-multipart>=0.0.9,<1",
]

[project.scripts]
omni-asset-cli = "omni_asset_cli:main"
omni-asset-service = "omni_asset_service.__main__:main"

[tool.setuptools]
py-modules = ["omni_asset_cli"]
packages = ["omni_asset_service"]
